[package]
name = "aocprep"
version = "0.1.0"
authors = ["Janus <janus@insignificancegalore.net>"]
edition = "2021"
description = "A tool for downloading personalized inputs for advent of code challenges. Not affiliated with AOC."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
toml = "0.5"
anyhow = "1.0"
reqwest = {version="0.10.9", features=["blocking"]}
structopt = "0.3"
scraper = "0.12.0"
itertools = "0.10.3"
